# api-flix

./: .gitignore  README.md  TODO  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
.envs/.local/: .env.example
.envs/.production/: .env.example
apps/actors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/actors/migrations/: 0001_initial.py
apps/genres/: admin.py  models.py  serializers.py  urls.py  views.py
apps/genres/migrations/: 0001_initial.py
apps/movies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/movies/migrations/: 0001_initial.py
apps/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
compose/local/django/: start.sh
compose/production/nginx/: default.conf
compose/production/traefik/: traefik.yml
core/: urls.py  views.py  wsgi.py
core/settings/: base.py  local.py
